introduced field and added helper to check expected messages